2008-08-04  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkseparatortoolitem.c
	* tests/testactions.c: remove pointless #undef GTK_DISABLE_DEPRECATED.

	* gtk/gtkcalendar.c (calendar_set_display_option): use
	gtk_calendar_set_display_options() instead of the deprecated
	gtk_calendar_display_options().

2008-08-04  Carlos Garnacho  <carlos@imendio.com>

	* gtk/gtkfilechooserbutton.c: Fix "/* within comment" warning.

2008-08-04  Carlos Garnacho  <carlos@imendio.com>

	* gtk/gtknotebook.c (gtk_notebook_expose): Set drag window background
	to be the GtkNotebook background color. This is a workaround to
	prevent black pixels in rounded tabs when reordering. Improves
	#368234.

2008-08-04  Carlos Garnacho  <carlos@imendio.com>

	* gtk/gtk.symbols:
	* gtk/gtkfilechooserbutton.[ch]:
	* gtk/gtkfilechooserdefault.[ch]:
	* gtk/gtkfilechooserdialog.[ch]:
	* gtk/gtkfilechooserwidget.[ch]: Deprecate
	gtk_file_chooser_*_new_with_backend(), since GIO is already used
	directly. Fixes #545976.

2008-08-04  Carlos Garnacho  <carlos@imendio.com>

	* gtk/gtk.symbols:
	* gtk/gtkfilechooser.[ch]: Make GFile-oriented API public. Fixes
	#545978.
	* gtk/gtkfilechooserbutton.c:
	* gtk/gtkfilechooserdefault.c:
	* gtk/gtkfilechooserutils.c: Update to use public GFile API.

2008-08-04  Michael Natterer  <mitch@imendio.com>

	* gtk/Makefile.am: build with GTK_DISABLE_DEPRECATED again.

	Fix pltcheck.sh by restricting the visibility of deprecated
	symbols to the places where they are actually used:

	* gtk/gtkclist.c
	* gtk/gtkctree.c
	* gtk/gtklistitem.c
	* gtk/gtklist.c
	* gtk/gtkprogressbar.c
	* gtk/gtkpixmap.c
	* gtk/gtkprogress.c: #undef GTK_DISABLE_DEPRECATED and #define
	__GTK_FOO_C__ on top instead of before including gtkaliasdef.c.

	* gtk/gtkclist.h
	* gtk/gtkctree.h
	* gtk/gtklistitem.h
	* gtk/gtklist.h
	* gtk/gtkpixmap.h
	* gtk/gtkprogress.h: make the headers visible if the respective
	__GTK_FOO_C__ are defined.

2008-08-04  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkclist.c